HelpSource/scdoc.css
*, *::before, *::after {
    box-sizing: inherit;
}

html, body {
    position: relative;
    box-sizing: border-box;
    height: 100%;
    padding: 0;
    margin: 0;
}

body {
    font-family: Arial, Helvetica, sans-serif;
    font-size: 10pt;
    color: var(--color-fg);
    background: var(--color-bg);
}

input, select, textarea {
    color: var(--color-input-fg);
    background: var(--color-input-bg)
}

div.contents {
    margin: 0;
    padding: calc(33px + .5em) 1em 1em;
}

table {
    border-collapse: collapse;
    font-size: 10pt;
    margin-top: 1em;
    margin-left: 2em;
}
table td {
    border: 1px solid var(--color-fg-200);
    padding: 0.3em;
}

table table {
    margin: 0em;
}

p {
    margin-top: 1em;
    margin-bottom: 0.3em;
}

a:link, a:visited, a:link:hover {
    text-decoration: none;
    color: var(--color-link);
}

a:link:hover {
    text-decoration: underline;
}

#inheritedclassmets, #inheritedinstmets {
    margin-top: 1em;
}

.inheritedmets_class {
    font-weight: bold;
    color: var(--color-fg-300);
    margin-top: 0.5em;
    margin-bottom: 0.25em;
}
.inheritedmets_class a {
    color: var(--color-fg-400);
}
ul.inheritedmets {
    list-style: none;
    padding: 0;
    margin: 0;
    margin-left: 2em;
    margin-top: 0.25em;
}
ul.inheritedmets li {
    font-family: monospace;
}
a.inheritedmets_toggle {
    font-size: 9pt;
    color: var(--color-fg-300);
    font-weight: normal;
/*    margin-left: 2em;*/
}

a.inheritedmets_toggle:hover {
    text-decoration: none;
    color: var(--color-fg);
}

input {
    max-width: 100%;
}

a.subclass_toggle {
    color: var(--color-fg-200);
    font-weight: normal;
}

a.subclass_toggle:hover {
    text-decoration: none;
    color: var(--color-fg);
}


#menubar {
    position: fixed;
    text-indent: 0;
    width: 100%;
    height: 33px;
    padding: 0.5em 0;
    background-color: var(--color-bg);
    box-shadow: 0em 0em 0.25em var(--color-fg-200);
    z-index: 2;
}

#nav {
    padding: 0;
    margin: 0;
}

#menubar .menuitem {
    padding: 0;
    margin: 0;
    border-right: 1px solid var(--color-fg-100);
    font-size: 10pt;
    display: inline-block;
    vertical-align: top;
}

#menubar .menuitem .home {
    /* It is better to make the logo a background image instead of an <img> because it is purely
    decorative. */
    background-image: url("images/SC_icon.png");
    background-repeat: no-repeat;
    background-position: 0.5em center;
    background-size: 1.5em;
    display: inline-block;
}

a.menu-link {
    color: var(--color-fg-300);
    padding: 0 0.75em 0 0.75em;
    /* This ensures that the logo isn't cut off. */
    min-height: 1.5em;
    /* This gets the text to vertically center. Discovered by accident. */
    line-height: 1.5em;
}
a.menu-link:hover {
    text-decoration: none;
    color: var(--color-fg-200);
}

li.menuitem a.menu-link.home {
    padding-left: 2.5em;
}

#menubar .menuitem .home a:hover {
    /* Lighten the background image by adding a translucent white layer over it. */
    background-color: rgba(255, 255, 255, 0.2);
}

#menubar .menuitem a.home span,
#menubar .toc-link span {
    display: none;
}

@media (max-width: 320px) {
    #toc-container {
        display: none;
    }
}

/* show theme selector only if there is enough space */
@media (max-width: 600px) {
    #menubar .menuitem:last-child {
        visibility: hidden;
    }
}

@media (min-width: 512px) {
    #menubar .menuitem .home a {
        padding-left: 2.5em;
    }

    #menubar .menuitem a.home span,
    #menubar .toc-link span {
        display: initial;
    }
}

#menubar .menuitem:last-child {
    border-right: none;
}

#topdoctitle {
    font-style: italic;
    color: var(--color-fg-300);
    cursor: pointer;
}

.submenu, #toc {
    position: absolute;
    top: 33px;
    padding: 0.5em;
    display: none;
    background-color: var(--color-bg);
    border: thin solid var(--color-fg-100);
}

.submenu a {
        position: relative;
        display: block;
        margin: 0;
/*      padding: 5px 10px;*/
        padding: 0.2em;
        width: auto;
        white-space: nowrap;
        text-align: left;
/*      text-decoration: none;*/
        color: var(--color-fg-400);
        font-weight: bold;
}

.toc_search {
    margin-left: 10px;
    color: var(--color-fg-200);
    font-size: 9pt;
}

.toc_search input {
    border: 1px solid var(--color-fg-100);
}


.header {
  padding-bottom: 0.18em;
}

#label {
    color: var(--color-fg-300);
    font-size: 0.9em;
}

#summary {
    font-weight: normal;
    font-size: 1.1em;
    font-style: italic;
    color: var(--color-fg-300);
}
#related {
    font-weight: bold;
    margin-top: 0.5em;
}
#filename {
    word-break: break-all;
}
.headerimage {
    float: right;
    margin-right: 1ex;
}

#superclasses {
    font-size: 9pt;
    color: var(--color-fg-400);
    font-weight: normal;
}

.extension-indicator-ctr {
    float: right;
    font-size: 12pt;
    padding: 0.4em 0.4em 0.2em 0.4em;
    background-color: var(--color-extensions-bg);
    color: var(--color-extensions-fg);
    border-radius: 3px;
    border-bottom: 2px solid var(--color-fg);
}

.extension-indicator-icon {
    height: 1em;
    margin-right: 0.5em;
}

.extension-indicator-text {
    line-height: 1em;
}

.subheader {
    font-size: 9pt;
    color: var(--color-fg-400);
    margin-top: 1em;
}

.jump {
    text-align: right;
    font-size: 9pt;
    color: var(--color-fg-300);
}
.jump a {
    font-weight: bold;
    padding-top:0;
    margin-top:0;
}

a.footnote {
    font-size: 9pt;
    top: -0.1em;
}
div.footnotes {
    border-top: 1px solid var(--color-fg-200);
    margin-left: 2em;
    margin-top: 3em;
    margin-right: 2em;
}
div.footnote {
    margin-bottom: 0.5em;
    margin-top: 0.5em;
    font-size: 9pt;
}

.soft {
    color: var(--color-fg-300);
}

h1 {
    margin: 0.1em 0;
    font-size: 2.6em;
    margin-bottom: 0em;
}
/* ... */

